--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<tr>
+			<thead>Roll Number</thead>
+			<thead>Name</thead>
+		</tr>
+		<tr>
+			<td>
+				25
+			</td>
+			<td>
+				Tushar Randhe
+			</td>
+			
+		</tr>
+		<tr>
+			<td>
+				30
+			</td>
+			<td>
+				Sumit Randhe
+			</td>
+			
+		</tr>
+	</table>
 
 </body>
 
