--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 </script>
 	<table>
 		<tr>
-			<th>Roll Number</th>
-			<th>Name</th>
+			<thead>Roll Number</thead>
+			<thead>Name</thead>
 		</tr>
 		<tr>
 			<td>
