--- a/main.html
+++ b/main.html
@@ -13,17 +13,17 @@
 	<table>
 		<tr>
             <th>
-	            <thead>Roll Number</thead>
-	            <thead>Name</thead>
+	            <td>Roll Number</td>
+	            <td>Name</td>
             </th>
 		</tr>
 		<tr>
 			<td>
 				25
 			</td>
-			<th>
+			<td>
 				Tushar Randhe
-			</th>
+			</td>
 		</tr>
 		<tr>
 			<td>
@@ -32,8 +32,16 @@
 			<td>
 				Sumit Randhe
 			</td>
-			
 		</tr>
+		<tr>
+			<td>
+				35
+			</td>
+			<td>
+				Vijay Randhe
+			</td>
+		</tr>
+		
 	</table>
 
 </body>
