--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 	<table>
 		<tr>
-            <th>
+            <thead>
 	            <td>Roll Number</td>
 	            <td>Name</td>
-            </th>
+            </thead>
 		</tr>
 		<tr>
 			<td>
