--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 	<table>
 		<tr>
             <thead>
-	            <td>Roll Number</td>
-	            <td>Name</td>
+	            <th>Roll Number</th>
+	            <th>Name</th>
             </thead>
 		</tr>
 		<tr>
